format: 调整文章的格式

--- a/source/_posts/2024/H2/技术思考.md
+++ b/source/_posts/2024/H2/技术思考.md
@@ -2,8 +2,8 @@
 title: 技术思考
 subtitle: 技术思考
 date: 2024-08-07 15:26:38
-categories: 生活思考
-tags: 思维
+categories: 职场思考
+tags: [思维, 职场]
 ---
 
 技术开发与产品运营合作的形式，一般是开发承担产品运营的需求；开发在把本职工作的技术做好做深的同时，很多时候还会收到“熟悉业务”的建议。那么，在技术和业务的联系应该如何去理解？思考的边界又在哪里？
