--- a/source/_posts/2024/H2/论女性与职场.md
+++ b/source/_posts/2024/H2/论女性与职场.md
@@ -1,8 +1,8 @@
 ---
-title: 
-subtitle: 
-date: 2024-01-01
-categories: 
+title: 论女性与职场
+subtitle: 论女性与职场
+date: 2024-03-11
+categories: 职场思考
 tags: 
 ---
 
