--- a/source/_posts/2024/H2/《一生的财富：洛克菲勒给子女的68个人生忠告》读书笔记.md
+++ b/source/_posts/2024/H2/《一生的财富：洛克菲勒给子女的68个人生忠告》读书笔记.md
@@ -1,6 +1,6 @@
 ---
 title: 《一生的财富：洛克菲勒给子女的68个人生忠告》读书笔记
-subtitle: 《一生的财富：洛克菲勒给子女的68个人生忠告》
+subtitle: 《一生的财富：洛克菲勒给子女的68个人生忠告》读书笔记
 date: 2024-08-27
 categories: 读书笔记
 tags: 
