--- a/source/_posts/2024/H2/论技术管理.md
+++ b/source/_posts/2024/H2/论技术管理.md
@@ -1,8 +1,8 @@
 ---
-title: 
-subtitle: 
-date: 2024-01-01
-categories: 
+title: 论技术管理
+subtitle: 论技术管理
+date: 2024-02-28
+categories: 职场思考
 tags: 
 ---
 
