--- a/source/_posts/2024/H2/技术思考.md
+++ b/source/_posts/2024/H2/技术思考.md
@@ -2,7 +2,9 @@
 title: 技术思考
 subtitle: 技术思考
 date: 2024-08-07 15:26:38
-categories: 职场思考
+categories: 
+    - [职场思考]
+    - [技术总结]  # 这两种分类是并列关系，即一篇文章同时被归入这两类
 tags: [思维, 职场]
 ---
 
