--- a/source/_posts/2024/H2/《幸福之路》读书笔记.md
+++ b/source/_posts/2024/H2/《幸福之路》读书笔记.md
@@ -46,14 +46,47 @@ tags:
 
 
 ## 竞争
+现代社会物资充盈，人即使不做激烈的竞争也可以生存下来；因此很多人说自己的努力属于“为了生存”，其实是站不住脚的。大家竞争不是为了生存，而是为了成功，或者说让自己吃的比别人好、住的比别人大。
+
+久而久之，大家心里只知道为了成功而竞争、停不下来，即使短暂休假也体会不到放松；比如我对象，习惯了互联网的快节奏，在休产假的时候也经常觉得不开心，心里焦虑、总是想搞点事做。我们很多人潜意识的把竞争当成了本能，意志的高度紧张带来神经衰弱，最后连消遣都困难，因为已经丧失了放松的能力。
+
+竞争并不是完全好或者完全不好，存在一个度。适当的竞争增加了收入，给人直接带来幸福；但是过度了，为了竞争胜利就要牺牲很多其它的东西（比如健康、陪伴家庭的时候、感受慢的能力），那就得不偿失了。
+
+罗素还提到了一个有意思的观点：教育的目的是为了享受（绘画、音乐等）。这里翻译的不好，罗素的本意应该是美的体验。而金钱无法直接带来美的体验。
 
 
 ## 无聊与兴奋
+无聊是人类特有的感受，动物不会无聊。无聊的反义词不是难过，而是兴奋。那么我们这样来理解：无聊是因为兴奋不起来，无法兴奋是因为环境让我们打不起精神（比如打螺丝的人在流水线每天都很无聊）。
+
+克制无聊，要么是走出环境，要么是接受。因为无聊是人生的题中应有之义；另外它也有好处。试想一个人永远出于不无聊的兴奋状态，他估计很年轻就会器官衰竭而死，或者因为一点都接受不了无聊而自杀。
+
+> “所以，生活幸福的基础是要拥有一定的忍受无聊的能力，这是一个人年轻时的必修课之一。”
+
+那怕是伟人的一生，大部分时间也都是看似无聊的。比如达尔文在27岁完成贝格尔号军舰的航行之后，随后漫长的50年都在家里写论文。
 
 
 ## 疲劳
 适度的身体疲劳是有益的，比如跑步之后的睡眠格外香甜；过度的身体疲劳当然不好，但现代社会较少发生。这里罗素主要讨论的是精神疲劳。
 
+精神疲劳是因为大部分人无法控制自己的精神，过于发散、东想西想，越想越累。佛学里说，高僧修行的方式是，挑水的时候挑水，砍柴的时候砍柴；沙弥做不到这一点，沙弥在挑水的时候想着柴火怎么砍，在砍柴的时候想着水缸满没满。
+
+> “理智的人只在有目标的时候才会反复思考他的困难，其他时间里他会关注其他事，而在夜里他什么都不想。”
+> 
+> “培养一种有条理的思维，在合适的时间充分地思考一件事，而不是在所有时间里断断续续地思考这件事，它所增加的幸福感和所提高的效率是令人吃惊的”。彼得德鲁克也提到过类似的观点，当然他是站在管理效能的角度来论述的。
+
+罗素还谈到了意识和无意识的理解，“心理学家们广泛研究了无意识怎样作用于意识，但反过来，意识怎样作用于无意识却少有涉及“、“大部分的无意识都是由曾经高度情绪化的有意识的想法构成的，而这些有意识的想法现在被掩藏了起来”。这个观点好新颖，但抽象了。
+
+
+## 嫉妒
+嫉妒会带来不幸福；它是人类与生俱来、根深蒂固的情绪。比如双胞胎的衣服一定要一模一样，否则就会打架。嫉妒推动对公平的渴望，进一步推动了民主制；成年人一样有嫉妒的心里，只是被理性和社会规则隐藏了起来。
+
+
+## 罪恶感
+这个没看懂，好像我日常没有罪恶感。
+
+
+## 被害妄想
+青春期的我也有过这种；好像别人对我有多不好（妄想了），才能反衬出我有多牛。年龄大了自然就没有这种想法了。
 
 
 ## 舆论恐惧
@@ -66,9 +99,15 @@ tags:
 “一个人对舆论的尊重程度应以自我生存和不伤害他人为限，过度的尊重其实是自甘臣服于不必要的专制，而这会从方方面面影响幸福感。”本质上来说，罗素认为幸福的本质是随心所欲的生活（以不伤害他人为前提），而不是按照亲戚、社会、看不见的手的规则来生活。
 
 
-
-
-
 # 第二部分、幸福的原因
+> 幸福的奥秘在于：让你的兴趣尽量广泛，对你关心的人与事表达出更多友善，而不是敌意。
 
 
+## 兴致
+
+
+
+# 总结
+罗素尽管是数学家，但本书所论述的幸福是无法通过逻辑推导出来，因此他只是说明幸福的理解、而不是证明他的理解是真理。
+
+我想，感受到幸福是一种能力，这种能力是可以被训练的；如同参观博物馆获得美学训练、进而提高美学素养一样。本书值得反复品味，我也会推荐给我的女儿。
