--- a/source/_posts/2024/H2/《幸福之路》读书笔记.md
+++ b/source/_posts/2024/H2/《幸福之路》读书笔记.md
@@ -6,7 +6,6 @@ categories: 读书笔记
 tags: 
 ---
 
-【幸福之路】读书笔记
 
 # 引言
 罗素写作本书的目的，是他结合自己的实际生活和思考，分享给大家一个经验：怎么获得幸福。
@@ -32,6 +31,7 @@ tags:
 1. 罪恶感。我部分我看不太懂，感觉和基督教义的人人有原罪的观点有关；
 2. 自恋。自恋的人爱的只是自己，丧失了爱人的能力（例如自恋的人爱的只是很多人爱他的那种感觉），丧失了是事物的兴趣（例如自恋的人专精与钢琴只是为了别人的羡慕，不是真的喜欢钢琴）；因此自恋的人还是专注自我，就容易不幸福；
 3. 自大。逻辑上和自恋类似，只是区别在于自大的心理目的是让别人畏惧他，自恋的心理目的是让别人爱慕他；
+
 
 ## 拜伦式的不幸福
 有些人（比如拜伦）认为世界的本质就是痛苦、这世上没什么值得喜爱的东西、“错的不是我而是这个世界”；不好意思的是我也有过这些想法。
@@ -100,14 +100,43 @@ tags:
 
 
 # 第二部分、幸福的原因
+幸福还是可以获得的；但受到高等教育的人往往更难体会到幸福，因为这些人会设定更高的目标，它更难实现，而只有实现了目标才会感到幸福。比如农民抓田鼠，一天抓了10只会幸福；教授发表论文，也会幸福；但显然，教授获得幸福的难度比农民大很多。
+
+人可以在发挥才能的过程中获得幸福，注意是过程，而不是结果，比如这个结果引起的他人的咱们。就想乔布斯说的，“过程即是奖励”。具体来说，“发挥才能的过程”有三表现：工作、爱好（对物）、好奇（对人）。前两种好理解，而“好奇”指的是喜欢观察人、能从人们的个性中发现趣味。
+
 > 幸福的奥秘在于：让你的兴趣尽量广泛，对你关心的人与事表达出更多友善，而不是敌意。
 
 
 ## 兴致
 
 
+## 情爱
+缺爱的人不容易感到幸福；而现实是，越有爱的人越容易获得更多的爱，越缺爱的人越不容易得到爱。可以说是爱的马太效应。比如，很多缺乏父母的爱的女生很容易被渣男骗。
+
+缺爱的人容易用讨好的行为去博取别人的爱；但很难博取到。因为这种行为背后是一种等价交换，并且用廉价的东西（比如糖果）换取昂贵的东西（爱）。同理，像为赚取利息而放贷那样计算着付出爱是没有用的，算计的爱不是真爱，得到它的人也不会觉得这是真爱。
+
+有爱的人可以得到安全感和自信，而这两点会带来幸福。有爱的人会觉得不管怎么样都有退路，这是缺爱的人没法体会到的。“缺爱的人经常透过门缝去体会爱的感觉”。
+
+表达爱也可以是一种占有别人的方式：表达爱可以保护一个怯懦的人，进一步就可以占有她。
+
+
+## 家庭
+家庭是最小单位和最现实的共产主义；没有结婚、或者没有自己家庭的人永远也体会不了。
+
+
+## 工作
+
+
+## 闲情逸致
+
+
+## 努力与放弃
+
+
 
 # 总结
 罗素尽管是数学家，但本书所论述的幸福是无法通过逻辑推导出来，因此他只是说明幸福的理解、而不是证明他的理解是真理。
+
+幸福是一件简单的事情，只需要做到：食物与住所、健康、情爱、工作成就、同伴的尊重、向外而不是向内的激情和兴趣，对有些人来说性爱也是必需的。
 
 我想，感受到幸福是一种能力，这种能力是可以被训练的；如同参观博物馆获得美学训练、进而提高美学素养一样。本书值得反复品味，我也会推荐给我的女儿。
