--- a/source/_posts/2024/H2/《资本论第一卷》读书笔记.md
+++ b/source/_posts/2024/H2/《资本论第一卷》读书笔记.md
@@ -7,3 +7,31 @@ tags:
 ---
 
 
+> 第一卷讲述资本的生产过程
+
+
+# 第一篇、商品和货币
+
+## 商品
+
+## 交换过程
+
+## 货币或商品流通
+
+
+# 第二篇、货币转化为资本
+
+
+# 第三篇、绝对剩余价值的生产
+
+
+# 第四篇、相对剩余价值的生产
+
+
+# 第五篇、绝对剩余价值和相对剩余价值的生产
+
+
+# 第六篇、工资
+
+
+# 第七篇、资本的积累过程
