--- a/source/_posts/2024/读书笔记/《大力出奇迹：张一鸣的创业心路与算法思维》.md
+++ b/source/_posts/2024/读书笔记/《大力出奇迹：张一鸣的创业心路与算法思维》.md
@@ -1,6 +1,6 @@
 ---
-title: 《大力出奇迹：张一鸣的创业心路与算法思维》读书笔记
-subtitle: 《大力出奇迹：张一鸣的创业心路与算法思维》读书笔记
+title: 读《大力出奇迹：张一鸣的创业心路与算法思维》
+subtitle: 读《大力出奇迹：张一鸣的创业心路与算法思维》
 date: 2024-08-20
 categories: 读书笔记
 tags: 
