--- a/source/_posts/2024/读书笔记/《杀死一只知更鸟》.md
+++ b/source/_posts/2024/读书笔记/《杀死一只知更鸟》.md
@@ -1,7 +1,7 @@
 ---
-title: 《资本论第一卷》读书笔记
-subtitle: 《资本论第一卷》读书笔记
-date: 2024-10-23
+title: 读《杀死一只知更鸟》
+subtitle: 
+date: 2024-12-99
 categories: 读书笔记
 tags: 
 ---
