--- a/source/_posts/2024/读书笔记/读《基督山伯爵》.md
+++ b/source/_posts/2024/读书笔记/读《基督山伯爵》.md
@@ -1,37 +1,63 @@
 ---
 title: 读《基督山伯爵》
 subtitle: 
-date: 2024-12-99
+date: 2024-12-15
 categories: 读书笔记
 tags: 
 ---
 
+# 背景
+看这本书的目的，是想借用书作为一个工具，了解到其他国家其他民族的思维方式和生活习惯；毕竟全球化是趋势。经典文学名著通过讲述一个故事，把当时的年代下形形色色的人的生活片段记录了下来，有很强的真实性，可以达成我这个目的。
 
-> 第一卷讲述资本的生产过程
+经典文学名著像是喝茶或者喝酒，味道有点寡淡，但是可以长久的喝下去；《斗破苍穹》这些书像是喝可乐，一般年纪小的时候才喜欢，并且最多也就喝一罐。拿《斗破苍穹》来了解国人是做不到的，《红楼梦》可能可以；这样类比的话，读《小王子》或者更通俗的小说也是了解不了法国人，《基督山伯爵》这种才可以。
 
+我又想到，抖音上有个黑人篮球师Sam，在杭州，说中文、完全是中式的表达。有人采访他为什么对中国文化这么熟悉？他说，他喜欢看三国，并把生活中的人往三国人物找模板，往往能找到。我想和我是差不多的思路。
 
-# 第一篇、商品和货币
+《基督山伯爵》本质是个复仇爽文故事，但真实的反映了1815年到1839年的生活，包括拿破仑复辟、贵族和普通人的生活、法国的气候地理等。虽然故事在现在看来比较俗套，但是这些背景信息对我还是很有用的；和法国人沟通的时候会有一个基础印象。
 
-## 商品
-
-## 交换过程
-
-## 货币或商品流通
-
-
-# 第二篇、货币转化为资本
+这本书似乎也是《琅琊榜》的灵感来源；故事的乏味性类似《海底两万里》，都是在历史的冲刷下磨平了故事性的曲折程度。
 
 
-# 第三篇、绝对剩余价值的生产
+# 思考
+1、主人公唐戴斯本来年轻有为（19岁当大幅，准备20岁就当船长，换算成现在年薪可以有个50-100w），本身专业、对同事关系、人畜无害、有对象；但就是这样还被同事（唐格拉尔）、邻居（卡德鲁斯）、情敌（费尔南）嫉妒和坑害。一句话，小心身边人、有财不外露；
+<br>
+
+2、审判官维尔福看了唐戴斯的信件，为了避免自己父亲被牵连、从而牵扯到自己，假装对唐戴斯示好、然后欺骗他、直接将它入狱。这说明不要随便的相信一个陌生人的善意，特别是在工作场合、庭审场合这些特殊的地方，无论古今中外都一样，突然的善意很可能就是坑你。这社会没那么多好人，回想一下对于陌生人，好像确实是我被坑的多、被帮助的少；
+<br>
+
+3、唐戴斯蒙冤入狱、和狱友一起越狱，就是《肖申克的救赎》的原型。而整个复仇故事，感觉像《琅琊榜》的原型。经典的文学作品就是经典，200年后的电影电视剧都以它为蓝本展开；而读者看了这样的故事之后，因为很真实，所以也可以用唐戴斯的故事劝诫自己，不能放弃希望，不能当绵羊；
+<br>
+
+4、即使在监狱中，唐戴斯还有思考、理性的越狱。确实什么环境下都不能停止思考，王者荣耀张良说“我思故我在”。学会用自己的眼睛去观察，用自己的大脑去思考，拒绝人云亦云；
+<br>
+
+5、记住这些地名，让我有了兴趣，得去看一看：伊夫堡、科西嘉岛、马赛、巴黎、加泰罗尼亚、基督山岛、厄尔巴岛、佛罗伦萨、香榭丽舍大街；
+<br>
+
+6、法里亚神父这样提到看书。换算起来它是一周看一本书，理解了150本书之后变得很牛；
+> 我在罗马的图书室里有近五千册书。我读了一遍又一遍，发现如果选读其中一百五十本，即使不说可以通晓人类全部知识吧，至少也够终生受用了。我花三年时间精读了这一百五十本书。我在被捕前，已经对这些书的内容烂熟于胸了。现在我即便身处牢房，也还能完整地回忆起这些书中的内容。它们的作者，包括修昔底德，色诺芬，普卢塔克，提图斯·李维，塔西图斯，斯特拉达，约尔南代斯，但丁，蒙田，莎士比亚，斯宾诺莎，马基雅弗利和博絮埃。这里我仅仅举出了一些最重要的作者的名字。​
+<br>
+
+7、法利亚神甫分析谁谋害了唐戴斯的方法，值得借鉴。当我们分析不清楚一件事情的时候，就想想看这件事对谁有利对谁有害，一般就是受益方发起的。利益是社会永恒的驱动。没有无缘无故的善意，但存在无缘无故的恨意；当一个人的行为高尚的过分了，那就是有坑在里面（不符合利益驱动的逻辑）。这就是我们的社会啊；
+<br>
+
+8、细看这本书很多细节，发现19世纪的法国人和21世纪的中国人没什么不同，利益驱动、欺骗、金钱崇拜、忘恩负义，就不一一列举了，这些人性之恶看来是不分国家、不分种族、不分历史的；
+> “昨夜那儿有犯人逃跑，​”、“管它呢，​”头儿瞅着他，心想，​“就算是他，也值。要不，这么能干的水手哪儿去找。​”
+
+> 什么也不用害怕？可不是，一开头总是许愿许得挺漂亮，接下来就说放心啊，什么也不用害怕啊。临了一拍屁股走人，说过的话根本不算数。得，等到哪天早上，这些可怜虫大难临头，还不明白是怎么惹的祸呢。​
+
+> “您知道，先生，在生意场上是没有朋友，​”他说，​“只有客户的。​”
+
+> 九月一日，莫雷尔回来了。全家人都焦急不安地等着他；这次巴黎之行可能是他的最后一线生机了。原来，莫雷尔是去找唐格拉尔了。如今唐格拉尔已是百万富翁，而当初他是多亏莫雷尔的举荐，才得以进入西班牙的一家银行，并在那儿发迹的。听人说，现在唐格拉尔拥有六百万到八百万的资财，信贷额度则是无限的。所以，唐格拉尔不用从腰包里掏出一个子儿便能挽救莫雷尔；只要他肯为一笔贷款具保，莫雷尔便得救了。其实，莫雷尔早就想到了唐格拉尔，但他对这个人有一种不可抑制的本能的反感，因此，他一拖再拖，直到山穷水尽才去找他。然而本能的感觉是对的，他果然遭到了拒绝，蒙羞含恨而归。
+
+9、莫尔赛夫（唐格拉尔）原本是西班牙普通渔民，但有钱人在发际之后都想彰显自己的家族很牛逼，造出很多故事；历史人物也一样，出生的时候白鹤环绕、百花开发，其实都是扯淡的。
+> “您这么问一点也不唐突，先生，​”莫尔塞夫很诚恳地说，​“您猜得很对，这是我们家族，也就是说家父宗族的纹章。不过，正如您所看见的，旁边还有一枚纹章，上面有座银色塔楼，那是家母宗族的纹章。就家母而言，我有西班牙血统，但莫尔塞夫家族是法国南方最古老的家族之一。​”
+<br>
+
+10、
 
 
-# 第四篇、相对剩余价值的生产
+# 人物关系
+本来想把人物关系导入nebula做可视化，太麻烦就不想弄了。
 
 
-# 第五篇、绝对剩余价值和相对剩余价值的生产
-
-
-# 第六篇、工资
-
-
-# 第七篇、资本的积累过程
