--- a/source/_posts/2024/读书笔记/读《基督山伯爵》.md
+++ b/source/_posts/2024/读书笔记/读《基督山伯爵》.md
@@ -50,14 +50,63 @@ tags:
 
 > 九月一日，莫雷尔回来了。全家人都焦急不安地等着他；这次巴黎之行可能是他的最后一线生机了。原来，莫雷尔是去找唐格拉尔了。如今唐格拉尔已是百万富翁，而当初他是多亏莫雷尔的举荐，才得以进入西班牙的一家银行，并在那儿发迹的。听人说，现在唐格拉尔拥有六百万到八百万的资财，信贷额度则是无限的。所以，唐格拉尔不用从腰包里掏出一个子儿便能挽救莫雷尔；只要他肯为一笔贷款具保，莫雷尔便得救了。其实，莫雷尔早就想到了唐格拉尔，但他对这个人有一种不可抑制的本能的反感，因此，他一拖再拖，直到山穷水尽才去找他。然而本能的感觉是对的，他果然遭到了拒绝，蒙羞含恨而归。
 
-9、莫尔赛夫（唐格拉尔）原本是西班牙普通渔民，但有钱人在发际之后都想彰显自己的家族很牛逼，造出很多故事；历史人物也一样，出生的时候白鹤环绕、百花开发，其实都是扯淡的。
+> “在这当口，老天有眼，卡德鲁斯在国外被捕并被带回了法国。他对罪行供认不讳，但说那是妻子预谋，指使他干的。他被判服终生苦役，我被开释。​”
+
+9、莫尔赛夫（唐格拉尔）原本是西班牙普通渔民，但有钱人在发际之后都想彰显自己的家族很牛逼，造出很多故事；历史人物也一样，出生的时候白鹤环绕、百花开发，其实都是扯淡的。牵引出来，很多大人物的自传都是自吹自擂；
 > “您这么问一点也不唐突，先生，​”莫尔塞夫很诚恳地说，​“您猜得很对，这是我们家族，也就是说家父宗族的纹章。不过，正如您所看见的，旁边还有一枚纹章，上面有座银色塔楼，那是家母宗族的纹章。就家母而言，我有西班牙血统，但莫尔塞夫家族是法国南方最古老的家族之一。​”
 <br>
 
-10、
+10、维尔福在拿破仑时代、复辟时代都是政治不倒翁，“玩得转的人”。无论哪个国家哪个民族都是一样的，都有这样的人，都是为了利益而奋斗，哪里都有圈子。文学作品好就好在这里，可以让我们了解另外一个国度另外一个民族的故事；
+
+11、这本书成书于1844年，整本书引用了大量的罗马典故、圣经故事和名烟；由于我对这些不了解，因此感觉很生硬。对于读外文书感到吃力；比如天使、选民、天主、后面的举例，是不符合国人的表述习惯的。以此类推，可能现代法国人在日常生活也会引用这些，因此对我来说有必要继续了解罗马和圣经故事；
+
+12、维尔福家族是检察官贵族家庭，但有女儿、续弦的妻子；存在后妈的家庭（组合式家庭）都有很大的不稳定性，书中的例子活生生的表现了这一点。维尔福的妻子为了儿子，居然想将瓦朗蒂娜和圣梅朗都毒死，太可怕了，当然这是在基督山伯爵引导下的行为。因此以后和这样的家庭相除，需要非常小心；
+
+13、全书是围绕这些要素来展开故事的，伯爵也是依靠这些要素将仇人耍的团团转的：利益、党派斗争、财富、贪婪、情感、家庭关系、贵族与平民、父权、政治联姻。这基本就和中国一模一样；
+
+14、大仲马的这段话说明了幸福的相对性，也是罗素在《幸福之路》中提到的重要观点。对于一个一直身处幸福的人来说，很可能感受不到幸福；对于一个饿了十天、然后吃馒头的人，非常幸福。
+> “至于您，莫雷尔，我要告诉您的秘密是：这个世界上无所谓幸福，也无所谓不幸，有的只是一种境况和另一种境况的比较，如此而已。只有体验过极度不幸的人，才能品尝到极度的幸福。只有下过死的决心的人，马克西米利安，才会知道活着有多好。”
 
 
 # 人物关系
 本来想把人物关系导入nebula做可视化，太麻烦就不想弄了。
 
+爱德蒙·唐戴斯：基督山伯爵，又名布索尼神甫，
+海黛：土耳其公主，父亲是阿里帕夏，是费尔南的上司，被费尔南出卖
+阿里：男仆
+巴蒂斯塔：男仆
+贝尔图乔：男仆，他的妹妹是贝内代托的养母
 
+【维尔福家族】
+德·维尔福：王室检察官，保王党人
+诺瓦蒂埃·维尔福：检察官维尔福的父亲，革命党人
+瓦朗蒂娜·维尔福：检察官维尔福和蕾妮·圣梅朗的女儿，马克西米利安·莫雷尔的恋人
+维尔福夫人：检察官维尔福的现任妻子
+爱德华·维尔福：检察官维尔福的儿子
+
+【圣梅朗家族】
+德·圣梅朗：维尔福的岳父，蕾妮·圣梅朗的父亲，保王党人
+蕾妮·圣梅朗：维尔福的第一任妻子
+
+【莫雷儿家族】
+老莫雷尔：莫雷儿父子公司的老板，唐戴斯的前老板，温和的保王党人
+马克西米利安·莫雷尔：老莫雷尔的儿子，年轻军官，瓦朗蒂娜·维尔福的恋人
+
+【埃皮奈家族】
+德·埃皮奈：将军，保王党人，与老维尔福决斗被杀
+弗朗兹·德·埃皮奈：与瓦朗蒂娜订婚
+
+【唐格拉尔家族】
+唐格拉尔：原本是莫雷儿船只法老号上的财务，后来发际成了男爵，银行家
+唐格拉尔夫人：维尔福的情妇，育有一子
+欧仁妮·唐格拉尔：唐格拉尔男爵的女儿，与阿尔贝·德·莫尔塞夫订婚
+吕西安·德布雷：唐格拉尔夫人的情夫，政府宣传部的公务员
+
+【莫尔赛夫家族】
+费尔南：唐戴斯的情敌，梅塞苔丝的表哥，原本是渔民，后来在战争中发际，改名莫尔赛夫
+梅塞苔丝：唐戴斯的恋人，费尔南的妻子
+阿尔贝·德·莫尔塞夫：费尔南和梅塞苔丝的儿子，与欧仁妮·唐格拉尔订婚
+
+【其它】
+卡德鲁斯：裁缝，后来入狱
+安德烈亚·卡瓦尔坎蒂：本名贝内代托，假装是意大利亲王，与欧仁妮·唐格拉尔订婚；是维尔福和唐格拉尔夫人的私生子；
