--- a/source/_posts/2024/读书笔记/读《大力出奇迹：张一鸣的创业心路与算法思维》.md
+++ b/source/_posts/2024/读书笔记/读《大力出奇迹：张一鸣的创业心路与算法思维》.md
@@ -1,14 +1,22 @@
 ---
 title: 读《大力出奇迹：张一鸣的创业心路与算法思维》
-subtitle: 读《大力出奇迹：张一鸣的创业心路与算法思维》
+subtitle: 
 date: 2024-08-20
 categories: 读书笔记
 tags: 
 ---
 
-整本书的评价：垃圾。但是书最后记录的张一鸣的几页心得思考可以看看，这个有价值；甚至可以反复看。
 
-关于思维
+# 背景
+整本书的评价：垃圾。传记类的书，最大的问题就是，作者很可能根本不懂主角的产品、思维方式，只是把主角的人生经历像数萝卜一样记录下来；这种故事书对于读者是毫无意义的。比如《硅谷钢铁侠》、《稻盛和夫》、《刷新》，都是这种类型的垃圾。
+
+以后这种书不应该被写进我的博客读书笔记。
+
+但是书最后记录的张一鸣的几页心得思考可以看看，这个是张一鸣的个人思考。有价值；甚至可以反复看。
+
+
+# 思考
+## 关于思维
 1、延迟满足感程度不在一个量级的人，是没法进行有效沟通的。
 
 2、三思而后行，但三思的迭代速度要快。
@@ -75,7 +83,7 @@ tags:
 
 33、低落的状态时情况往往没有感受的难，松懈的时候其实不如想象的容易，人往往难理性。
 
-关于创业
+## 关于创业
 1、强烈的动机比方法更根本。
 
 2、成事不易，猛磕关键点。
@@ -92,7 +100,7 @@ tags:
 
 8、非理性让社会存在各种商业机会，非理性让创业公司错过这些机会。不要非理性，要非常理性。
 
-关于人生
+## 关于人生
 1、逃逸平庸的重力，变成超级赛亚人，继续不断练级。
 
 2、对原则最好的保护就是对原则的捍卫而不是妥协。
@@ -127,7 +135,7 @@ tags:
 
 17、对现实隐忍，对未来有期待，在当下有作为。
 
-关于管理
+## 关于管理
 1、大胆雇佣年轻人。优秀的年轻人也许会犯错，但不会平庸，更划算的是会进步。
 
 2、我希望大家每天睡得饱饱的，精神十足地来工作、来生活。
@@ -150,7 +158,7 @@ tags:
 
 11、关于福利，好的公司应该争取提供：健康的食品、宜居不远的房子、舒适抗职业病的办公环境，这是真正的人力资本投资。
 
-关于产品
+## 关于产品
 1、关于需求的问题有：​“没看到的问题”和“没真正想看的问题”​，后者其实更本质一些。
 
 2、“很想把设计得更好的或能做好的做出来”​，从技术的角度是不错的，但从产品角度就是锤子想找钉子。
@@ -165,7 +173,7 @@ tags:
 
 7、反复、反复、反复体会需求、体验产品，高强度地使用产品。
 
-关于职场
+## 关于职场
 1、我不反对不同的人和不同阶段的人选择做降级的事情，但是认为，应该有一些人、有一些公司可以有更高的目标，一流的技术人才应该加入顶尖的科技公司，顶尖的科技公司应该敢为天下先。
 
 2、不要加入那些嫁入豪门的公司，嫁入豪门就很难成为豪门；而应该加入优秀公司，和它一起成为豪门。
