--- a/source/_posts/2023/生活思考/人生的意义.md
+++ b/source/_posts/2023/生活思考/人生的意义.md
@@ -1,13 +1,13 @@
 ---
-title: 
+title: 人生的意义
 subtitle: 
-date: 2024-01-01
-categories: 
+date: 2023-06-10
+categories: 生活思考
 tags: 
 ---
 
-XXX
 
+# 背景
 关于人生的意义，我从高中思考到研究生都没想明白。但我觉得可以参考下先贤的观点。
 
 唯心主义认为，意识是人生的意义，它超越了物质世界。个人的意义可以通过实现自我意识、追求心灵的成长和实现灵魂的发展来实现。
