--- a/source/_posts/2023/职场思考/20231212工作思考.md
+++ b/source/_posts/2023/职场思考/20231212工作思考.md
@@ -1,56 +1,63 @@
 ---
-title: 
+title: 20231212工作思考
 subtitle: 
-date: 2024-01-01
-categories: 
+date: 2023-12-12
+categories: 职场思考
 tags: 
 ---
 
-XXX
 
-为什么要工作
-人都是天性散漫的，工作是约束、早起晚归、条条框框，都是反人性的。为什么还要工作？90% 的原因无非是为了碎银几两，为了生存；剩下 10%，是因为人的群居属性，需要社交，或者为了更虚无的自我实现。
+# 为什么要工作
+人都是天性散漫的，工作是约束、早起晚归、条条框框，都是反人性的。为什么还要工作？90%的原因无非是为了碎银几两，为了生存；剩下 10%，是因为人的群居属性，需要社交，或者为了更虚无的自我实现。
 
-怎么才算做好了工作
+
+# 怎么才算做好了工作
 为了更多的碎银几两，为了更好的生存，肯定要把工作做的更好。这里很多人存在一个认知的误区，以为自己天天加班、以为自己技术很牛，就是把工作做的更好了。其实是荒谬。
 
 一个人工作做的好不好，其实是被他人评价的；说的更具体的一点，其实是被你的直属上级决定的。类似中国的政治生态，一把手几乎拥有绝对的权利；你的直属上级，其实决定了你的升迁、加薪、信任度等一些生产要素。
 
 所以，核心结论：直属领导觉得你的工作做的好那就是好。其他团队的领导、虚线领导、+2领导、平级同事的评价，都不重要。领导觉得你好，你的马内才会多，你的工作情绪才会饱满。
 
-技术人的工作目标
+
+# 技术人的工作目标
 俗话说，打工的目的就是升职加薪。对于技术人来说，升职就是技术职级的晋升，对应的难关是职级答辩；加薪就是月薪、年终奖、股票的提高，对应的难关是绩效考核。二者是螺旋往复交错的曲线，并不一定是相关的；也就是说，技术的提高并不一定带来良好的考核结果，优异的考评也并不一定说明技术很牛。当然，大师可以将二者有机的结合起来；也许也需要机会。
 
-怎么做绩效考核
+
+# 怎么做绩效考核
 良好的绩效结果，来源于高质高量的业务产出。业绩，可以用非技术的手段来实现；例如，这个月我开发了10 个新功能，可以通过良好的结构设计、完善的开发管线来实现，也可以拼命加班来实现。因此，对于开发来说，有另外的一个认知误区：不要以为绩效和技术相关；技术是自己的，绩效是公司的。
 
 做什么事才才会有高质量的业务产出？答案是，往领导的 OKR 上面靠拢。任何开发需求都要往领导的 OKR 上面靠拢，如果开发需求本身就是高切合 OKR，那么很好，直接做就行了；如果与 OKR 不切合，那么能不能往 OKR 上面靠拢；如果不能靠拢、一点关系没有，那么可以尽量推掉这个需求，因为对我们来说毫无益处了。
 
-思维方式：任何一个需求都要考虑，做这个对我的领导有什么好处？对我有什么好处？
-怎么做技术答辩
+
+# 思维方式
+任何一个需求都要考虑，做这个对我的领导有什么好处？对我有什么好处？
+
+
+# 怎么做技术答辩
 开发都有种技术思维，喜欢使用新工具、喜欢学习新的编程语言、喜欢性能优化；但是证明自己的技术到达了高水平，有需要有一些系统化的思考，或者说陈述方式，或者说是技术答辩的套路。是的，万事万物都有套路。
 
-体现技术能力的三种方式：
+# 体现技术能力的三种方式：
+- 我选择了多种方案，然后做了对比，选择了最合适我们的场景的一种技术方案或者组件。其中，对比全球的方案，技术体现比全国的高，进一步的又比全公司的高；
+- 了解经典的开发方法论，然后将日常开发流程往经典开发方法论上面靠，说明自己实践了经典的开发思维。比如我的开发实践了 dataops、devops 的每一个环节，每个技术步骤都和全面，也是技术的体现；
+- bad case分析，或者说性能调优的实践。比如，有个线程占用了 100% 的 CPU，我通过一波分析，找到了原因并且修复了，这里面可能设计一些软件的核心原理，那么是体现了技术的。当然，事实上我们开发日常的 95% 都不会有任何问题，都是搬砖体力活，但是技术答辩肯定不能讲这种白开水的日常；一定要找疑难杂症来陈述。这里还有一个讨论，就是遇到问题之后，我先想了一个办法，解决了这个问题、但是又暴漏了新的问题，然后继续找方法，周而复始，最终全面的解决了问题；
 
-我选择了多种方案，然后做了对比，选择了最合适我们的场景的一种技术方案或者组件。其中，对比全球的方案，技术体现比全国的高，进一步的又比全公司的高；
-了解经典的开发方法论，然后将日常开发流程往经典开发方法论上面靠，说明自己实践了经典的开发思维。比如我的开发实践了 dataops、devops 的每一个环节，每个技术步骤都和全面，也是技术的体现；
-bad case 分析，或者说性能调优的实践。比如，有个线程占用了 100% 的 CPU，我通过一波分析，找到了原因并且修复了，这里面可能设计一些软件的核心原理，那么是体现了技术的。当然，事实上我们开发日常的 95% 都不会有任何问题，都是搬砖体力活，但是技术答辩肯定不能讲这种白开水的日常；一定要找疑难杂症来陈述。这里还有一个讨论，就是遇到问题之后，我先想了一个办法，解决了这个问题、但是又暴漏了新的问题，然后继续找方法，周而复始，最终全面的解决了问题；
 为什么很多打工人很努力，很勤奋，但就是没有存在感，技术也没提高，绩效也不好。同志们，值得我们深思。
 
-工作分类
+# 工作分类
 我们对工作进行分类，想想哪些工作更好出绩效、或者提高技术？
 
-基础工作。不得不做的部分，这个岗位的本职工作，你不想做、产品也会找你提需求。这种工作属于纯粹的脏活累活，很费时间、技术没有提高、做的再多领导也感知不多；
-提效工作。属于自己开发工具或者流程，对基础工作进行提效和润色、质量提高。这个属于亮点的部分，是值得花时间的，并且相对来说是有收益的主体的，就是业务价值；
-创新工作。这个属于自己试探性的工作，投入很多、难度较大、回报也不确定，因为之前没人做过，压根没法找到确切的收益的角色或者场景；
+- 基础工作。不得不做的部分，这个岗位的本职工作，你不想做、产品也会找你提需求。这种工作属于纯粹的脏活累活，很费时间、技术没有提高、做的再多领导也感知不多；
+- 提效工作。属于自己开发工具或者流程，对基础工作进行提效和润色、质量提高。这个属于亮点的部分，是值得花时间的，并且相对来说是有收益的主体的，就是业务价值；
+- 创新工作。这个属于自己试探性的工作，投入很多、难度较大、回报也不确定，因为之前没人做过，压根没法找到确切的收益的角色或者场景；
+
 以上三部分工作，每一部分的应付思路，都值得专门拿出来讨论和思考。
 
 要做好以上的工作，需要时间，大量的时间。所以问题的核心在于，怎么抽出时间，去做第二种、第三种工作。
 
-吾日三省吾身
+
+# 吾日三省吾身
 日常的工作很繁琐，事情一件跟着一件，做的过程当中，人经常忘记了这些处理的思路。所以，需要吾日三省吾身，每天提醒自己，是不是用最理性（套路）的思维去应付日常的琐碎。
 
-思考一：做的事情是不是领导的 OKR？如果不是 OKR，能不能把这件事情往 OKR 上面靠拢？如果靠不拢，能否不做？如果非做不可，是否可以丢给手下去做、或者给到其它团队去做？
-思考二：做的事情有没有预设的受益方，做之前有没有提前了解他们认不认可？做之后有没有总结、宣传、提高自己的影响力？
-思考三：一件事情的难度是否值得我去做？如果非常简单、没有任何难度，那为什么别人没做？我做了之后好处在哪里？
-2023-12-22 总结。
+- 思考一：做的事情是不是领导的 OKR？如果不是 OKR，能不能把这件事情往 OKR 上面靠拢？如果靠不拢，能否不做？如果非做不可，是否可以丢给手下去做、或者给到其它团队去做？
+- 思考二：做的事情有没有预设的受益方，做之前有没有提前了解他们认不认可？做之后有没有总结、宣传、提高自己的影响力？
+- 思考三：一件事情的难度是否值得我去做？如果非常简单、没有任何难度，那为什么别人没做？我做了之后好处在哪里？
