--- a/source/_posts/2024/职场思考/互联网大厂生存之道（开发路线）.md
+++ b/source/_posts/2024/职场思考/互联网大厂生存之道（开发路线）.md
@@ -1,13 +1,13 @@
 ---
-title: 
+title: 生存的更好
 subtitle: 
-date: 2024-01-01
+date: 2024-01-15
 categories: 
 tags: 
 ---
 
 
-什么叫生存的更好
+# 什么叫生存的更好
 生存是人需要解决的最基本的问题；在鹅厂怎么才能生存的更好？这个问题在我入职三年之后终于有了一些闭环的理解，这里简单分享给大家。
 
 首先的一个问题是，“生存的更好”怎么定义？通俗来讲就是升职、加薪，但在鹅厂还可以细化为几类：
