--- a/source/_posts/2025/生活思考/2025出游计划粗排.md
+++ b/source/_posts/2025/生活思考/2025出游计划粗排.md
@@ -1,40 +1,10 @@
 ---
-title: 2025年春节
+title: 2025出游计划粗排
 subtitle: 
-date: 2025-02-03
+date: 2025-02-05
 categories: 
 tags: 
 ---
-
-
-# 今年春节
-初一：仙湖植物园+79号渔船
-初二：泰式按摩+桂满陇浙江菜
-初三：清理家中闲置物品
-初四：大仟里Meland
-初五：家里吃海底捞
-初六：收心
-初七：打麻腮风疫苗
-
-
-
-去哪玩
-
-1-3岁的婴儿、妈妈（不适应日步数超过1.5万步、不适应单次30分钟以上的打车）
-
-首先，1岁半的孩子体力有限，不能长时间行走，需要父母抱或者推车，所以景点需要推车友好，道路平坦。其次，这个阶段的孩子感官发展很快，喜欢触摸、观察动物、颜色鲜艳的东西，或者有互动性的元素。另外，行程不能太紧凑，需要安排足够的休息时间，避免过度疲劳。
-
-接下来，哪些类型的景点适合呢？动物园、水族馆、植物园这些地方有丰富的视觉刺激，动物和植物能引起孩子的兴趣。另外，有儿童设施的公园或度假村，比如有沙池、浅水池的地方，孩子可以玩耍。自然景观方面，比如海滩、草原，孩子可以接触沙子、草地，体验不同的触感。
-
-还要考虑住宿，选择亲子友好的酒店，有婴儿床、餐椅等设施。另外，行程安排要宽松，比如上午游玩，中午回酒店休息，下午再轻度活动。
-
-最后，总结一下，推荐的重点是安全、便利、感官体验丰富的地方，避免过度劳累，注重亲子互动和孩子的舒适度。可能还要提到短途旅行和周边游，作为适应性的开始，逐步增加距离和时长。
-
-为1岁6个月宝宝选择旅行目的地，需遵循 「低强度、高感官、强便利」 原则。甚至可以持续到三岁之前
-
-终极建议：真正的育儿智慧，在于既遵循发展规律，又能识别孩子的 「个人时间线」 。当TA能主动收拾自己的旅行小背包，且途中开始问「为什么那座山是绿色的」时，便是时候让「低强度、高感官、强便利」原则优雅退场，迎接更具挑战的探索时代了。
-
-
 
 
 # 深圳市内（以遛娃为目的）
@@ -85,10 +55,11 @@ tags:
 - 飞机、轻轨来来回回，太吵
 
 ## 前海石公园
+2024年去了，当时在修路，不知道现在修完没有
 
 ## 铁仔山公园
 
-## 深圳动物园
+## 深圳动物园：犹豫
 - 小红书风评不好，票价129元，隔壁广州只有20元；比较犹豫去不去；
 
 ## 东涌、西涌
@@ -124,58 +95,96 @@ tags:
 
 - Tips: 海洋公园、香港迪士尼，得专门抽一天去；
 
+## 各种度假村
+珠三角的度假村好像不如江浙沪的
 
-## 度假村
 - 惠州南昆山慕斯嘉华酒店
 - 珠海御温泉
 - 汤崎，不太适合带1岁多小孩
-
-## 三亚
-- 需要错开节假日高峰，淡季是4月-11月
-- 建议五天四晚，带小孩不宜过久
-- 单独玩三亚一个城市，不去海口、万宁、陵水，后者最好开车环岛
-- 来回机票1500每人，3人就是4500；酒店，1000一晚，一共4000；这就将近1个w。所以整体预计1.5w；
 
 ## 珠海
 珠海长隆海洋王国，主要看海洋动物，有七月最爱的小海豚，直接住企鹅酒店
 
 ## 惠州
-惠州巽寮湾/双月湾
+惠州巽寮湾，其它的好像没什么特别好玩的
 
 ## 广州
 广州长隆野生动物世界，主要看陆地动物，还有大马戏和欢乐世界
 
 ## 东莞
-东莞松山湖
+东莞松山湖、东莞香山动物园，其它的好像没什么特别好玩的
 
 
 # 省外（可以遛娃，可以夫妻两人）
-郴州草原小东江
-桂林阳朔
-厦门
-漳州
-三亚湾
-亚龙湾
-海棠湾
-大东海等三亚湾区
-西岛
-蜈支洲岛等三亚海岛
-西沙群岛
-大理
-海南陵水
-北戴河
+
+## 三亚
+- 需要错开节假日高峰，淡季是4月-11月
+- 建议五天四晚，带小孩不宜过久
+- 单独玩三亚一个城市，不去海口、万宁、陵水，后者最好开车环岛
+- 按淡季来看，来回机票1500每人，3人就是4500；酒店，1000一晚，一共4000；这就将近1个w。所以整体预计1.5w；如果是旺季需要翻倍；
+
+
+## 桂林
+
+## 厦门
+
+## 长沙
+
+## 大理
+
+## 荔波
+
+## 泉州
+
+## 九寨沟
+
+## 西北环线
+路途辛苦，有高原反应，不能洗澡，一天至少4小时车程，不适合带小孩和老人
+
+## 大连
+
+## 江浙沪
+度假酒店不错，看小红书的图很有特色
+
+## 北海
+涠洲岛
 
 
 # 国外（以夫妻两人游玩为主要目的，顺便可以遛娃）
-普吉岛
+以下这些暂时不太适合带小孩去，小孩太小，需要先适应短途、中途，再尝试出国
+
+## 普吉岛
+- 入门级海岛；旅游景点分散在普吉岛本岛附近，每天都要坐车出发登小岛，然后再回本岛的酒店；具体去哪些小岛，可以看自己喜欢亲子游、浮潜、沙滩打卡、逛夜市等不同选择；
+- 机票：淡季单人最少1500往返，可以从深圳、广州、香港出发；住宿一天一千，四晚就是4k；基本五天四晚，两人就是1w；
+- 对于普吉岛来说，是由多个单日游组成的；需要每天频繁的坐车或者坐船，体力要求比较高，简称跳岛游；
+- 斯米兰浮潜（只在10月到来年5月开放）和人妖是必去的，所以不适合带老人小孩；所以也不适合7-8月暑假去；
+
+## 济州岛
+适合夏天去避暑，但深圳广州都没有直飞，香港的航班是红眼的。实在不合适
+可以从深圳先到上海，再转机济州岛。也还可以接受
+
+## 新加坡
+非常适合带全家出游，又近，最好是四天三晚，这样可以纯玩两天
+可以在老婆出差新加坡的时候，我带家人过去，这样可以节省酒店费用
+
+## 仙本那
+马来西亚面签岛屿，需要跳岛游，机场距离小镇有1小时车程
+住宿条件一般
+
+## 巴厘岛
+慢节奏游玩，路很烂，好拍照，老婆估计喜欢
+在本岛玩就行，可以不跳岛
+
+## 薄荷岛
+菲律宾小岛，适合潜水
+
+## 长滩岛
+菲律宾小岛，适合度假
+
+## 其它海岛
 芽庄
 芭提雅
-仙本那
-薄荷岛
-长滩岛
-巴厘岛
 苏梅岛
-沙巴岛
 富国岛
 美娜多
 帕劳
