--- a/source/_posts/2025/读书笔记/玩《荒野大镖客2：救赎》.md
+++ b/source/_posts/2025/读书笔记/玩《荒野大镖客2：救赎》.md
@@ -1,10 +1,43 @@
 ---
-title: 
+title: 玩《荒野大镖客2：救赎》
 subtitle: 
-date: 2025-02-02
+date: 2025-02-06
 categories: 
-tags: 
+tags: 游戏
 ---
 
-XXX
 
+# 背景
+我最初是在公司的PC上面玩的，后来换了工作电脑、没显卡，所以买了一台PS5来玩；累计玩了漫长的130个小时。现在回顾一下，整理一下我的感想。
+
+游戏故事发生在1899年，那是美国西部大开发的后期；范德林德帮原来以抢劫为生，随着西部涌入越来越多的人，规则需要被建立，因此范德林德帮会被政府警察、赏金猎人、平克顿侦探更多的追捕，直到消亡的过程。
+
+游戏内提到了美国诸多历史元素，玩家通过亚瑟摩根的视角，置身于历史事件中，给玩家一种宏大叙事的感觉；尽管当前宏大叙事在消亡。这种创作手法很类似霸王别姬、阿甘正传等电影。游戏内的历史事件有：西部大开发、西部淘金热、南北战争、牛仔、黑人种族歧视、驱赶印第安人、华人劳工修铁路、蒸汽机和电气化、女权运动等。
+
+以上只是背景。
+
+
+# 亚瑟
+游戏第一到第六章展示的都是游戏性，比如枪械、捕猎、钓鱼、马匹等。到第六章中期，亚瑟得知患上肺结核（在当时是绝症），才开始进入到故事的高潮：亚瑟开始反思过去的暴虐行为，反思生命的意义，开始帮助他人，与游戏主题“救赎”契合起来，直到36岁死亡。
+
+曾经我认为游戏内亚瑟的转变太过突兀，人怎么会在得知绝症后就马上弃恶从善呢？而现在我是这样理解的：死亡是人类无法逃避的终极命题。当亚瑟得知自己身患绝症，直面死亡的恐惧时，他必然会对生命的意义和价值进行深入思考（非常重要的思考，每个人都有他自己的意义，要自己想）。这种思考是人类面对死亡时的本能反应，即使是杀人犯也不例外。在死亡的阴影下，人们往往会试图寻找生命的意义和自己存在的价值，希望在有限的时间里做出一些有意义的事情，以减轻对死亡的恐惧和对生命的遗憾。
+
+此外，西方文化中一直有关于忏悔和救赎的传统，例如基督教的教义（人人生而有罪）。这种文化观念深入人心，即使是像亚瑟这样的亡命之徒也可能受到影响。在生命的最后时刻，他可能受到这种文化潜意识的驱动，希望通过反思和忏悔来寻求内心的平静和灵魂的救赎。
+
+当然并不是所有人在死亡之前都会这样思考，只是很多人会这样；更好的做法是在人生的早期阶段就思考清楚，这样后续的行为才是有目的性的，就不会被别人推着走了。
+
+
+# 约翰
+约翰·马斯顿是游戏最后两章的主角，他的救赎体现在：首先，抛弃过去习惯的牛仔生活，改变为开垦农场，与妻子艾比盖儿、儿子杰克一起不再过颠沛流离的生活，变的稳定起来；然后，在得知迈卡的消息之后，又放弃稳定的生活、冒险式的为亚瑟复仇。这里的两次变化，都体现了约翰的自我救赎。
+
+以前的约翰是没有行为目标的，个人随着帮派而起伏；后来目的明确了起来，人生节奏就加快了很多。从约翰身上我也看出目标的重要性。
+
+
+# 达奇
+我相信达奇是想给帮忙一个光明的未来，所以一直在计划攒钱、打劫。但在何西阿死了之后，行为已经失控了；很多原来被称为“家人”的成员被击杀，这里告诉我对所有人都不能盲从，没有人可以全知全能，更加没有人可以大公无私。
+
+
+# 关于救赎
+游戏的主题是“救赎redemption”。在东西方语境中，西方的救赎和东方的改过自新有一些相似性，但也有不同。东方语境的改过自新主要是强调行为上的纠错，而西方的救赎含有更广的意义。
+
+救赎的起源是基督教义的原罪，随着西方哲学的发展有了新的解读。救赎不仅是与过去的错误告别，还体现在找到自己的人生价值（比如亚瑟最后的助人、约翰的复仇）、自我意识觉醒（因为它帮助人摆脱蒙昧，比如亚瑟从一开始只知道听从帮派指挥，收回贷款、杀人，到最后有了自己的价值判断，是非观）、对上帝的忏悔、宽恕他人、坚守道德准则等方面，可以看出它是一个涵盖范围很广的词汇。
