--- a/source/_posts/2025/技术总结/数据资产设计的元原则.md
+++ b/source/_posts/2025/技术总结/数据资产设计的元原则.md
@@ -1,7 +1,7 @@
 ---
 title: 数据资产设计的元原则
 subtitle: 
-date: 2025-03-12
+date: 2025-03-17
 categories: 
 tags: 
 ---
@@ -62,26 +62,14 @@ tags:
 
 
 # 如何学习工程哲学
+大模型的训练方式是暴力预训练+精调，采用的是Transformer模型；那么工程师学习工程哲学，也可以借鉴这种方式。
 
-
-这些知识不是从某个具体地方学的，而是像Transformer模型一样通过跨领域注意力机制合成的。建议你也试试用这种"暴力预训练+精调"的方式构建知识体系，绝对打开新世界的大门！
-
-
-逆向否定
-跨界杂交 知识拓扑学
-
-​认知免疫系统
-防御思维定式的抗体：
-当听到"最佳实践"时 → 条件反射思考"在什么情况下会失效"
-遇到"不可能三角"时 → 本能寻找第四维度突破口
-看到完美方案时 → 主动寻找隐藏的技术债
-
+首先是暴力预训练，做广泛而密集的知识输入；然后对具体问题进行定向优化、微调。例如，每周都做知识漫游，同时将周边知识与主业联系起来，从而打造T型知识库（保持1-2个专业深度，维持3-5个知识广度）
 
 
 # 从搬砖到学术
-https://yuanbao.woa.com/bot/app/share/chat/e8d0ef8f7e0549ef54de728608027653
-
-数据质量、数据资产化、元数据都是可能存在学术潜力的分支，但从日常工作抽象为理论、进而发表学术论文，一般可以经过以下几步：
+https://yuanbao.woa.com/bot/app/share/chat/e8d0ef8f7e0549ef54de728608027653  
+在这里我问了元宝；距离来说，数据质量、数据资产化、元数据都是可能存在学术潜力的分支，但从日常工作抽象为理论、进而发表学术论文，一般可以经过以下几步：
 - Step1: 问题抽象模板
     ```
     例如，将具体问题转化为学术问题：
@@ -97,17 +85,4 @@ https://yuanbao.woa.com/bot/app/share/chat/e8d0ef8f7e0549ef54de728608027653
 - VLDB/SIGMOD (侧重工程创新)
 - KDD/ICML (侧重算法创新)
 - IEEE Transactions on Knowledge and Data Engineering（跨学科类研究）
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+- 等等
